--- a/src/index.css
+++ b/src/index.css
@@ -19,17 +19,78 @@
   --color-text: #35383b;
 
   /* primary-shades*/
-  --primary-50: #e5ffeb;
-  --primary-100: #ccffd7;
-  --primary-200: #99ffaf;
-  --primary-300: #66ff87;
-  --primary-400: #33ff5f;
-  --primary-500: #00ff37;
-  --primary-600: #00cc2c;
-  --primary-700: #009921;
-  --primary-800: #006616;
-  --primary-900: #00330b;
-  --primary-950: #001a06;
+  --color-primary-50: #e5ffeb;
+  --color-primary-100: #ccffd7;
+  --color-primary-200: #99ffaf;
+  --color-primary-300: #66ff87;
+  --color-primary-400: #33ff5f;
+  --color-primary-500: #00ff37;
+  --color-primary-600: #00cc2c;
+  --color-primary-700: #009921;
+  --color-primary-800: #006616;
+  --color-primary-900: #00330b;
+  --color-primary-950: #001a06;
+
+  /* linear gradient */
+  --gradient-primary: linear-gradient(
+    120deg,
+    var(--color-primary) 30%,
+    var(--color-secondary) 60%,
+    var(--color-accent) 100%
+  );
+  --gradient-secondary: linear-gradient(
+      90deg,
+      var(--color-primary),
+      var(--color-secondary) 50%,
+      var(--color-accent) 100%
+    )
+    0%/200%;
+
+  --gradient-accent: linear-gradient(
+      120deg,
+      var(--color-primary) 30%,
+      var(--color-secondary) 50%,
+      var(--color-accent) 100%
+    )
+    0% / 120%;
+
+  --gradient-white: linear-gradient(to bottom, #f7f7f7 0%, #ffffff 100%);
+
+  /* spacing */
+  --spacing-small: 3px;
+  --spacing-xs: 4px;
+  --spacing-sm: 8px;
+  --spacing-md: 16px;
+  --spacing-lg: 24px;
+  --spacing-xl: 32px;
+  --spacing-2xl: 40px;
+  --spacing-3xl: 48px;
+  --spacing-4xl: 64px;
+
+  /* shadows */
+  --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
+  --shadow-md: 0 4px 6px rgba(0, 0, 0, 0.1);
+  --shadow-lg: 0 10px 15px rgba(0, 0, 0, 0.15);
+  --shadow-xl: 0 20px 25px rgba(0, 0, 0, 0.2);
+
+  /* borders */
+  --border-radius-sm: 4px;
+  --border-radius-md: 8px;
+  --border-radius-lg: 16px;
+
+  /* transitions */
+  --transition-fast: 0.2s ease-in-out;
+  --transition-medium: 0.5s ease-in-out;
+  --transition-slow: 1s ease-in-out;
+
+  /* text shadows */
+  --text-shadow-sm: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  --text-shadow-md: 2px 2px 4px rgba(0, 0, 0, 0.15);
+  --text-shadow-lg: 3px 3px 6px rgba(0, 0, 0, 0.5);
+  --text-shadow-hero: 0.2rem 0.125rem 0.2rem rgba(0, 0, 0, 0.8);
+
+  /* box shadows */
+  --box-shadow: 0 0.875rem 2.5rem rgba(0, 0, 0, 0.55);
 
   /* common */
   --border-radius: 1.2rem;
@@ -45,13 +106,30 @@
   --word-spacing-body: var(--spacing-xs);
   --text-transform-body: none;
 
-  /* header */
-  --gradient-white: linear-gradient(
-    96deg,
-    var(--color-white),
-    var(--color-light-white) 100%
-  );
+  /* Buttons  */
+  --gradient-btn: linear-gradient(to left, #008000, #014401, #012b01);
+  --gradient-btn-hover: linear-gradient(to right, #008000, #014401, #012b01);
+  --btn-font-weight: 600;
+  --btn-font-size: clamp(0.9rem, 2vw, 1.1rem);
+  /* 0.875rem; */
+  --btn-letter-spacing: 0.04rem;
+  --btn-word-spacing: none !important;
+  --btn-text-shadow: none !important;
+  --btn-text-transform: capitalize;
+  --btn-color: var(--color-secondary);
+  --btn-hover-color: var(--color-primary);
+  --btn-bg-gradient: var(--gradient-btn);
+  --btn-hover-gradient: var(--gradient-btn-hover);
+  --btn-border-radius: var(--border-radius-sm);
+  --btn-border-color: rgba(133, 210, 18, 0.5);
+  --btn-hover-border-color: rgba(133, 210, 18, 0.5);
+  --btn-box-shadow: inset 0 0.2rem 2rem rgba(0, 0, 0, 0.88),
+    0 0rem 0.5rem 0rem rgba(133, 210, 18, 0.3);
+  --btn-hover-box-shadow: inset 0 0.2rem 2rem rgba(0, 0, 0, 0.78),
+    0 0rem 0.7rem 0rem rgba(133, 210, 18, 0.7);
+  --btn-transition: var(--transition-slow);
 
+  /* header */
   --gradient-header-top-bar: linear-gradient(
     96deg,
     var(--color-primary),
@@ -80,8 +158,7 @@
   --logo-hover-gradient: var(--gradient-logo-hover);
   --logo-font-size: 2rem;
   --logo-font-weight: 600;
-  --logo-letter-spacing: -0.05rem;
-
+  --logo-letter-spacing: -0.1rem;
   --hamburger-dark-bar: var(--color-primary);
   --hamburger-light-bar: var(--color-secondary);
 
@@ -92,6 +169,159 @@
   --nav-link-color: var(--color-grey);
   --nav-link-active-color: var(--color-primary);
 }
+
+*,
+*::after,
+*:before {
+  margin: 0;
+  padding: 0;
+  font-size: 1.05rem;
+  border: 0 solid !important;
+  box-sizing: border-box !important;
+  text-decoration: none !important;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+li {
+  list-style: none;
+}
+
+body {
+  margin: 0;
+  background-color: var(--color-background);
+  background: var(--gradient-white) !important;
+  color: var(--color-text);
+  text-rendering: optimizelegibility;
+  -webkit-font-smoothing: antialiased;
+  text-size-adjust: none;
+  overflow-x: hidden;
+  font-family: var(--font-family) !important;
+  font-size: var(--font-size-body);
+  font-weight: var(--font-weight-body);
+  letter-spacing: var(--letter-spacing-body);
+  /* word-spacing: var(--word-spacing-body); */
+  text-transform: var(--text-transform-body);
+}
+
+a,
+li {
+  text-decoration: none;
+}
+
+ul {
+  padding: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+strong {
+  color: var(--color-grey-dark);
+}
+
+h1 {
+  margin: 0;
+  padding: 0;
+  color: var(--color-white) !important;
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--color-text) !important;
+  font-weight: 600 !important;
+  line-height: 1.3125rem;
+}
+
+h2 {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+}
+
+.btn {
+  outline: 0 !important;
+  background-color: var(--btn-color);
+  padding: 0.5rem !important;
+  white-space: nowrap;
+  font-size: var(--btn-font-size);
+  letter-spacing: var(--btn-letter-spacing);
+  word-spacing: var(--btn-word-spacing);
+  text-transform: var(--btn-text-transform);
+  text-shadow: var(--btn-text-shadow);
+  border-radius: var(--btn-border-radius);
+  border-width: 1px !important;
+  border-style: solid;
+  border-color: var(--btn-border-color) !important;
+  box-shadow: var(--btn-box-shadow);
+  transition: var(--btn-transition);
+  cursor: pointer;
+}
+
+.btn-hero {
+  background-color: var(--btn-color) !important;
+  box-shadow: var(--btn-box-shadow);
+}
+
+.btn-hero:hover,
+.btn-hero:focus {
+  background-color: var(--btn-hover-color) !important;
+  border-color: var(--btn-hover-border-color) !important;
+  box-shadow: var(--btn-hover-box-shadow);
+}
+
+.section-wrapper {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.section-wrapper:not(.hero-section):not(.testimonials-section):nth-child(even) {
+  /* background-color: rgb(229, 255, 235, 1); */
+  background-color: hsla(128, 81%, 93%, 1);
+  background-image: radial-gradient(
+      at 36% 77%,
+      hsla(96, 64%, 96%, 1) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 81% 26%, hsla(129, 64%, 96%, 1) 0px, transparent 50%),
+    radial-gradient(at 20% 30%, hsla(73, 64%, 96%, 1) 0px, transparent 50%);
+}
+
+.container-wrapper {
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
+  /* display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center; */
+  /* background-color: red; */
+}
+
+@media (min-width: 62rem) {
+  .container {
+    max-width: 56rem !important;
+    /* background-color: red !important; */
+  }
+}
+
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
