--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -7,28 +7,76 @@
 .left-plant {
   position: absolute;
   left: 0;
-  top: 1rem;
+  top: -1rem;
   width: 13rem;
   opacity: 0.5;
   z-index: 0;
 }
 
+.about-content {
+  display: flow-root;
+  float: none;
+  text-align: left;
+}
+
 .about-image {
   max-width: 100%;
-  max-width: 100%;
-  height: 100%;
+  height: 21rem;
+  padding: 0rem;
+  display: block;
+  order: 1;
+  float: none;
+  margin-bottom: 1rem;
   border-radius: var(--border-radius);
-  box-shadow: var(--box-shadow-image);
 }
 
-.toxin {
-  font-weight: 800;
-  border-bottom: 2px dotted var(--color-text) !important;
-  transition: var(--transition-medium);
+.toxin-card {
+  font-size: 0.9rem;
+  font-style: oblique;
+  padding-left: 0.5rem;
+  padding-top: 1.2rem;
 }
 
-.toxin:hover,
-.toxin:focus {
-  color: var(--color-text-dark);
-  border-bottom: 2px solid var(--color-text-dark) !important;
+.toxin-card li {
+  padding-bottom: 0.3rem;
+}
+
+.toxin-card strong {
+  font-size: 0.95rem;
+}
+
+.btn-about {
+  display: flex;
+  justify-content: center;
+}
+
+@media (min-width: 40rem) {
+  .btn-about {
+    display: unset;
+    justify-content: start;
+  }
+  .about-image {
+    width: 100%;
+    height: 26rem;
+  }
+}
+
+@media (min-width: 48rem) {
+  .about-section::before {
+    background-size: 23rem 16rem;
+  }
+  .about-image {
+    float: left;
+    width: 21rem;
+    height: 19.5rem;
+    margin-top: 0.8rem;
+    margin-right: 2rem;
+  }
+}
+
+@media (min-width: 60rem) {
+  .about-image {
+    width: 27rem;
+    height: 29rem;
+  }
 }
