--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -51,13 +51,13 @@
 }
 
 @media (min-width: 40rem) {
-  .btn-about {
-    display: unset;
-    justify-content: start;
-  }
   .about-image {
     width: 100%;
     height: 26rem;
+  }
+  .btn-about {
+    width: min-content;
+    margin: 0 auto;
   }
 }
 
@@ -65,6 +65,7 @@
   .about-section::before {
     background-size: 23rem 16rem;
   }
+
   .about-image {
     float: left;
     width: 21rem;
@@ -78,5 +79,8 @@
   .about-image {
     width: 27rem;
     height: 29rem;
+  }
+  .btn-about {
+    width: unset;
   }
 }
