plantBenefits-section -- completed

--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -1,36 +1,10 @@
 .section-title {
-  margin: 0 auto 2.5rem auto !important;
-  text-align: center;
+  margin: 0 auto 1.5rem auto !important;
   line-height: 1 !important;
 }
 
-.section-subtitle {
-  margin-bottom: 0;
-  font-size: 1.3rem;
-  font-weight: 700;
-  color: var(--color-text-dark);
-  text-align: center;
-  position: relative;
-  overflow: hidden;
-}
-
-.section-subtitle::before,
-.section-subtitle::after {
-  background-color: var(--color-primary);
-  content: "";
-  display: inline-block;
-  width: 2.5rem;
-  height: 0.18rem;
-  position: relative;
-  vertical-align: middle;
-}
-
-.section-subtitle::before {
-  right: 0.5em;
-  margin-left: -50%;
-}
-
-.section-subtitle::after {
-  left: 0.5em;
-  margin-right: -50%;
+.section-description {
+  font-size: 1rem;
+  max-width: 50rem;
+  margin: 0 auto 3rem auto;
 }
