--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
   --font-family: "Mulish", sans-serif;
 
   /* colors */
-
   --color-black: #242424;
   --color-white: #ffffff;
   --color-light-white: #fbfdfb;
@@ -20,7 +19,6 @@
   --color-text: #212529bf;
   --color-text-dark: #213547;
   --color-headings: var(--color-text-dark);
-  /* #35383b; */
 
   /* primary-shades*/
   --color-primary-50: #e5ffeb;
@@ -42,6 +40,7 @@
     var(--color-secondary) 60%,
     var(--color-accent) 100%
   );
+
   --gradient-secondary: linear-gradient(
       90deg,
       var(--color-primary),
@@ -60,95 +59,6 @@
 
   --gradient-white: linear-gradient(to bottom, #f7f7f7 0%, #ffffff 100%);
 
-  /* spacing */
-  --spacing-small: 3px;
-  --spacing-xs: 4px;
-  --spacing-sm: 8px;
-  --spacing-md: 16px;
-  --spacing-lg: 24px;
-  --spacing-xl: 32px;
-  --spacing-2xl: 40px;
-  --spacing-3xl: 48px;
-  --spacing-4xl: 64px;
-
-  /* shadows */
-  --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
-  --shadow-md: 0 4px 6px rgba(0, 0, 0, 0.1);
-  --shadow-lg: 0 10px 15px rgba(0, 0, 0, 0.15);
-  --shadow-xl: 0 20px 25px rgba(0, 0, 0, 0.2);
-
-  /* borders */
-  --border-radius-sm: 4px;
-  --border-radius-md: 8px;
-  --border-radius-lg: 16px;
-
-  /* transitions */
-  --transition-fast: 0.2s ease-in-out;
-  --transition-medium: 0.5s ease-in-out;
-  --transition-slow: 1s ease-in-out;
-
-  /* text shadows */
-  --text-shadow-sm: 1px 1px 2px rgba(0, 0, 0, 0.1);
-  --text-shadow-md: 2px 2px 4px rgba(0, 0, 0, 0.15);
-  --text-shadow-lg: 3px 3px 6px rgba(0, 0, 0, 0.5);
-  --text-shadow-hero: 0.2rem 0.125rem 0.2rem rgba(0, 0, 0, 0.8);
-
-  /* box shadows */
-  /* --box-shadow: 0 0.875rem 2.5rem rgba(0, 0, 0, 0.55); */
-  --box-shadow-image: 6px 2px 16px 0px rgba(136, 165, 191, 0.48),
-    -6px -2px 16px 0px rgba(255, 255, 255, 0.8);
-  /* 0 0.875rem 2.5rem rgb(0, 87, 19, 0.4); */
-  /* 0 0 1.5625rem rgb(0, 87, 19, 0.8); */
-  /* common */
-  --border-radius: 1.2rem;
-  --text-shadow-white: 0.125rem 0.125rem 0.3125rem rgba(255, 255, 255, 0.2);
-  --text-shadow: 0.125rem 0.125rem 0.3125rem #000;
-  --box-shadow: 0rem 0.9375rem 1.5625rem rgba(0, 0, 0, 0.08);
-  --transition: all 0.5s ease;
-
-  /* Body */
-  --font-weight-body: 500;
-  --font-size-body: 1rem;
-  --letter-spacing-body: 0.035rem;
-  --word-spacing-body: var(--spacing-xs);
-  --color-text-body: var(--color-text);
-
-  /* Buttons  */
-  --gradient-btn: linear-gradient(
-    to right,
-    var(--color-primary-900),
-    var(--color-primary-800),
-    var(--color-primary-700)
-  );
-  /* #008000, #014401, #012b01); */
-  /* --gradient-btn-hover: linear-gradient(
-    to left,
-    var(--color-primary-800),
-    var(--color-primary-700),
-    var(--color-primary-600)
-  ); */
-  --btn-font-weight: 600;
-  --btn-font-size: clamp(0.9rem, 2vw, 1.1rem);
-  --btn-text-color: var(--color-white);
-  /* 0.875rem; */
-  --btn-letter-spacing: 0.04rem;
-  --btn-word-spacing: none !important;
-  --btn-text-shadow: none !important;
-  --btn-text-transform: capitalize;
-  --btn-color: var(--color-secondary);
-  --btn-hover-color: var(--color-primary);
-  --btn-bg-gradient: var(--gradient-btn);
-  --btn-hover-gradient: var(--gradient-btn-hover);
-  --btn-border-radius: var(--border-radius-sm);
-  --btn-border-color: rgba(133, 210, 18, 0.5);
-  --btn-hover-border-color: rgba(133, 210, 18, 0.5);
-  --btn-box-shadow: inset 0 0.2rem 2rem rgba(0, 0, 0, 0.88),
-    0 0rem 0.5rem 0rem rgba(133, 210, 18, 0.3);
-  --btn-hover-box-shadow: inset 0 0.2rem 2rem rgba(0, 0, 0, 0.78),
-    0 0rem 0.7rem 0rem rgba(133, 210, 18, 0.7);
-  --btn-transition: var(--transition-slow);
-
-  /* header */
   --gradient-header-top-bar: linear-gradient(
     96deg,
     var(--color-primary),
@@ -171,6 +81,87 @@
     )
     20%/ 120%;
 
+  /* spacing */
+  --spacing-small: 3px;
+  --spacing-xs: 4px;
+  --spacing-sm: 8px;
+  --spacing-md: 16px;
+  --spacing-lg: 24px;
+  --spacing-xl: 32px;
+  --spacing-2xl: 40px;
+  --spacing-3xl: 48px;
+  --spacing-4xl: 64px;
+
+  /* shadows */
+  --shadow-sm: 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.05);
+  --shadow-md: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
+  --shadow-lg: 0 0.625rem 0.9375rem rgba(0, 0, 0, 0.15);
+  --shadow-xl: 0 1.25rem 1.5625rem rgba(0, 0, 0, 0.2);
+  --shadow-light: 0 0 0.25rem -0.125rem rgba(0, 0, 0, 0.55);
+
+  /* borders */
+  --border-radius-sm: 0.25rem;
+  --border-radius-md: 0.5rem;
+  --border-radius-lg: 1rem;
+
+  /* transitions */
+  --transition-fast: 0.2s ease-in-out;
+  --transition-medium: 0.5s ease-in-out;
+  --transition-slow: 1s ease-in-out;
+
+  /* text shadows */
+  --text-shadow-sm: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.1);
+  --text-shadow-md: 0.125rem 0.125rem 0.25rem rgba(0, 0, 0, 0.15);
+  --text-shadow-lg: 0.1875rem 0.1875rem 0.375rem rgba(0, 0, 0, 0.5);
+  --text-shadow-hero: 0.2rem 0.125rem 0.2rem rgba(0, 0, 0, 0.8);
+
+  /* box shadows */
+  --box-shadow-image: 0.375rem 0.125rem 1rem 0px rgba(136, 165, 191, 0.48),
+    -0.375rem -0.125rem 1rem 0rem rgba(255, 255, 255, 0.8);
+
+  /* common */
+  --border-radius: 1.2rem;
+  --text-shadow-white: 0.125rem 0.125rem 0.3125rem rgba(255, 255, 255, 0.2);
+  --text-shadow: 0.125rem 0.125rem 0.3125rem #000;
+  --box-shadow: 0rem 0.9375rem 1.5625rem rgba(0, 0, 0, 0.08);
+  --transition: all 0.5s ease;
+
+  /* Body */
+  --font-weight-body: 500;
+  --font-size-body: 1rem;
+  --letter-spacing-body: 0.035rem;
+  --word-spacing-body: var(--spacing-xs);
+  --color-text-body: var(--color-text);
+
+  /* Buttons  */
+  --gradient-btn: linear-gradient(
+    to right,
+    var(--color-primary-900),
+    var(--color-primary-800),
+    var(--color-primary-700)
+  );
+
+  --btn-font-weight: 500;
+  --btn-font-size: clamp(0.95rem, 2vw, 1.1rem);
+  --btn-text-color: var(--color-white);
+  --btn-letter-spacing: 0.04rem;
+  --btn-word-spacing: none !important;
+  --btn-text-shadow: none !important;
+  --btn-text-transform: capitalize;
+  --btn-color: var(--color-secondary);
+  --btn-hover-color: var(--color-primary);
+  --btn-bg-gradient: var(--gradient-btn);
+  --btn-hover-gradient: var(--gradient-btn-hover);
+  --btn-border-radius: var(--border-radius-sm);
+  --btn-border-color: rgba(133, 210, 18, 0.5);
+  --btn-hover-border-color: rgba(133, 210, 18, 0.5);
+  --btn-box-shadow: inset 0 0.2rem 2rem rgba(0, 0, 0, 0.88),
+    0 0rem 0.5rem 0rem rgba(133, 210, 18, 0.3);
+  --btn-hover-box-shadow: inset 0 0.2rem 2rem rgba(0, 0, 0, 0.78),
+    0 0rem 0.7rem 0rem rgba(133, 210, 18, 0.7);
+  --btn-transition: var(--transition-medium);
+
+  /* header */
   --header-background-color: var(--color-background);
   --header-top-gradient-bar: var(--gradient-header-top-bar);
   --header-gradient-background: var(--gradient-white);
@@ -193,20 +184,16 @@
   /* section titles & description */
   --section-title-color: var(--color-text-dark);
   --section-title-font-size: clamp(1.8rem, 4vw, 3rem);
-
-  /* --section-font-size: clamp(1.5rem, 3vw, 2.5rem); */
   --section-title-font-weight: 700;
   --section-description-color: var(--color-text-body);
   --section-description-font-size: clamp(1rem, 2vw, 1.25rem);
   --section-description-max-width: 50rem;
   --section-description-margin: 2rem auto 3rem;
 
-  /* plan benefits section */
-  --benefits-card-background-color: var(--color-white);
-  --card-shadow-hover: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  --card-shadow: 0 0px 3px rgba(0, 0, 0, 0.1);
-
-  /* footer */
+  /* cards */
+  --card-background-color: var(--color-white);
+  --card-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  --card-shadow-hover: 0 1rem 1.5rem rgba(0, 0, 0, 0.3);
 }
 
 *,
@@ -269,9 +256,6 @@ img {
   height: auto;
 }
 
-/* strong {
-  color: var(--color-grey-dark);
-} */
 strong {
   color: var(--color-text-dark);
 }
@@ -297,8 +281,6 @@ h5,
 h6 {
   color: var(--color-headings) !important;
   font-weight: 800 !important;
-  /* line-height: 1.1 !important; */
-  /* padding-bottom: 0.8rem; */
 }
 
 h5 {
@@ -306,14 +288,15 @@ h5 {
 }
 
 .btn {
-  outline: 0 !important;
+  outline: none !important;
   color: var(--btn-text-color) !important;
   background-color: var(--btn-color);
   padding: 0.5rem !important;
   white-space: nowrap;
-  font-size: var(--btn-font-size);
-  letter-spacing: var(--btn-letter-spacing);
-  word-spacing: var(--btn-word-spacing);
+  font-size: var(--btn-font-size) !important;
+  font-weight: var(--btn-font-weight) !important;
+  letter-spacing: var(--btn-letter-spacing) !important;
+  word-spacing: var(--btn-word-spacing) !important;
   text-transform: var(--btn-text-transform);
   text-shadow: var(--btn-text-shadow);
   border-radius: var(--btn-border-radius);
@@ -339,18 +322,33 @@ h5 {
 .btn-green {
   background-color: var(--btn-color);
   background: var(--gradient-btn);
-  /* box-shadow: var(--btn-box-shadow); */
 }
 
 .btn-green:hover {
   transition: transform ease 0.2s;
-  /* background: var(--gradient-btn-hover); */
   box-shadow: 0 0.625rem 1.5625rem -0.3125rem var(--color-primary-900);
+}
+
+.btn-outline-green {
+  background: none;
+  background-color: transparent !important;
+  text-shadow: none !important;
+  padding: 0.5rem 1.5rem !important;
+  color: var(--btn-color) !important;
+  border-color: var(--btn-color) !important;
+}
+
+.btn-outline-green:hover {
+  transition: transform ease 0.2s;
+  background-color: var(--btn-color) !important;
+  color: var(--btn-text-color) !important;
 }
 
 .section-wrapper {
   padding-top: 6rem;
   padding-bottom: 6rem;
+  position: relative;
+  box-shadow: var(--shadow-light);
 }
 
 .section-wrapper:not(.hero-section):not(.testimonials-section):nth-child(even) {
@@ -371,6 +369,56 @@ h5 {
 .container-wrapper {
   padding-left: 1rem !important;
   padding-right: 1rem !important;
+}
+
+.card {
+  /* padding: 30px 0; */
+  padding-bottom: 1.5rem;
+  background-color: var(--card-background-color) !important;
+  border-radius: var(--border-radius-lg);
+  box-shadow: var(--card-shadow);
+  transition: var(--transition-medium);
+}
+
+.card:hover .card-body {
+  color: var(--color-text);
+}
+
+/* .card:hover {
+  transform: translateY(-0.3125rem);
+  box-shadow: var(--card-shadow-hover);
+} */
+
+.card .card-image-wrapper {
+  overflow: hidden;
+}
+
+.card-image {
+  width: 100%;
+  height: 240px;
+  object-fit: cover;
+  transition: transform 0.5s ease;
+}
+
+.card:hover .card-image {
+  transform: scale(1.07);
+}
+
+.card-title {
+  font-family: var(--h1-font-family);
+  font-weight: 700 !important;
+}
+
+.card:hover .card-title {
+  color: var(--color-secondary);
+}
+
+.card-description {
+  color: var(--color-dark-grey);
+}
+
+.card:hover .card-description {
+  color: var(--color-dark-grey);
 }
 
 @media (min-width: 62rem) {
