--- a/src/index.css
+++ b/src/index.css
@@ -329,6 +329,10 @@ h5 {
   box-shadow: 0 0.625rem 1.5625rem -0.3125rem var(--color-primary-900);
 }
 
+.btn-card {
+  width: 100%;
+}
+
 .btn-outline-green {
   background: none;
   background-color: transparent !important;
@@ -372,7 +376,6 @@ h5 {
 }
 
 .card {
-  /* padding: 30px 0; */
   padding-bottom: 1.5rem;
   background-color: var(--card-background-color) !important;
   border-radius: var(--border-radius-lg);
@@ -389,15 +392,15 @@ h5 {
   box-shadow: var(--card-shadow-hover);
 } */
 
-.card .card-image-wrapper {
+.card-image-wrapper {
   overflow: hidden;
 }
 
 .card-image {
   width: 100%;
-  height: 240px;
   object-fit: cover;
-  transition: transform 0.5s ease;
+  aspect-ratio: 3 / 2;
+  transition: var(--transition-medium);
 }
 
 .card:hover .card-image {
