--- a/src/components/homepage/PlantBenefits/PlantBenefits.css
+++ b/src/components/homepage/PlantBenefits/PlantBenefits.css
@@ -1,5 +1,5 @@
 .benefits-card {
-  background-color: var(--benefits-card-background-color);
+  /* background-color: var(--benefits-card-background-color); */
 }
 
 .benefit-icon {
