--- a/src/components/ui/SectionTitle/SectionTitle.css
+++ b/src/components/ui/SectionTitle/SectionTitle.css
@@ -5,16 +5,13 @@
   text-align: center;
 }
 
-.section-description {
-  font-size: var(--section-description-font-size);
-  max-width: var(--section-description-max-width);
-  margin: var(--section-description-margin);
-}
-
 .section-subtitle {
   margin-bottom: 0;
   font-size: 1.3rem;
-  font-weight: 700;
+  font-weight: 500;
+  letter-spacing: 0 !important;
+  line-height: 1.4;
+  font-family: var(--font-family-section-subtitle);
   color: var(--color-secondary) !important;
   text-align: center;
   position: relative;
@@ -40,4 +37,10 @@
 .section-subtitle::after {
   left: 0.5em;
   margin-right: -50%;
+}
+
+.section-description {
+  font-size: var(--section-description-font-size);
+  max-width: var(--section-description-max-width);
+  margin: var(--section-description-margin);
 }
