gallery, footer with news letter  section-completed

--- a/src/components/homepage/Testimonials/Testimonials.css
+++ b/src/components/homepage/Testimonials/Testimonials.css
@@ -12,6 +12,11 @@
   margin-bottom: 1rem;
 }
 
+.testimonial-image {
+  width: 4rem;
+  height: 4rem;
+}
+
 .testimonial-info {
   display: flex;
   flex-flow: column nowrap;
