--- a/src/components/common/Footer/Footer.css
+++ b/src/components/common/Footer/Footer.css
@@ -1,24 +1,51 @@
 .footer-section {
-  padding-top: 4rem;
-  background-color: var(--primary);
+  background-color: var(--color-primary);
   background: var(--gradient-secondary);
+  padding-top: 4rem;
+  padding-bottom: 1rem;
 }
 
 .footer-section * {
   color: var(--color-white) !important;
 }
 
-.footer-content .col:first-child .list-group {
+.newsletter-card {
+  /* box-shadow: var(--box-shadow-white); */
+  /* padding: 40px 30px; */
+  padding: 1.5rem 1rem 1rem 1rem;
+  border-radius: var(--border-radius);
+  max-width: 56.25rem;
+  margin: 0 auto 3rem auto;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+
+  /* box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08); */
+  /* border: 1px solid var(--color-primary); */
+  /* max-width: 56.25rem; */
+  /* margin-bottom: 2rem; */
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba (255, 255, 255, 0.3);
+  backdrop-filter: blur(10px);
+  box-shadow: 20px 20px 40px -6px var(--color-primary-900);
+  text-align: center;
+  transition: all 0.2s ease-in-out;
+}
+
+.col:first-child .list-group
+/* ,
+.col:last-child .list-group */ {
   --bs-list-group-item-padding-x: 0 !important;
 }
 
 .list-group {
   --bs-list-group-bg: transparent !important;
+  --bs-list-group-item-padding-y: 0.3rem !important;
+  --bs-list-group-item-padding-x: 0.8rem !important;
 }
 
 .list-group-item {
   border: 0;
 }
+
 .list-group-item a {
   position: relative;
   display: inline-block;
@@ -45,4 +72,9 @@ hr {
   width: 100vw !important;
   margin: 2rem auto 1rem;
   border: 1px solid #888 !important;
+}
+
+.footer-bottom {
+  padding: 0.5rem auto 1rem auto;
+  text-align: center;
 }
