--- a/src/components/homepage/Faq/Faq.css
+++ b/src/components/homepage/Faq/Faq.css
@@ -14,6 +14,10 @@
   opacity: 0.25;
 }
 
+.faq-content {
+  padding-bottom: 2rem;
+}
+
 .accordion {
   --bs-accordion-bg: var(--color-white) !important;
   /* color: var(--color-white) !important; */
@@ -27,7 +31,7 @@
 /* Custom header styling */
 .accordion-button {
   background: var(--color-primary-50) !important;
-  border-radius: var(--border-radius) !important;
+  /* border-radius: var(--border-radius) !important; */
   padding: 1.2rem;
   display: flex;
   justify-content: space-between;
