--- a/src/index copy.css
+++ b/src/index copy.css
@@ -124,6 +124,7 @@
   --text-shadow-white: 0.125rem 0.125rem 0.3125rem rgba(255, 255, 255, 0.2);
   --text-shadow: 0.125rem 0.125rem 0.3125rem #000;
   --box-shadow: 0rem 0.9375rem 1.5625rem rgba(0, 0, 0, 0.08);
+  --box-shadow-white: 0rem 0.9375rem 1.5625rem rgba(255, 255, 255, 1);
   --transition: all 0.5s ease;
 
   /* Body */
