--- a/src/index.css
+++ b/src/index.css
@@ -111,12 +111,16 @@
   --shadow-light: 0 0 0.25rem -0.125rem rgba(0, 0, 0, 0.55);
 
   /* text shadows */
+  --text-shadow: 0.125rem 0.125rem 0.3125rem #000;
   --text-shadow-sm: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.1);
   --text-shadow-md: 0.125rem 0.125rem 0.25rem rgba(0, 0, 0, 0.15);
   --text-shadow-lg: 0.1875rem 0.1875rem 0.375rem rgba(0, 0, 0, 0.5);
   --text-shadow-hero: 0.2rem 0.125rem 0.2rem rgba(0, 0, 0, 0.8);
+  --text-shadow-white: 0.125rem 0.125rem 0.3125rem rgba(255, 255, 255, 0.2);
 
   /* box shadows */
+  --box-shadow: 0rem 0.9375rem 1.5625rem rgba(0, 0, 0, 0.08);
+  --box-shadow-dark: 0rem 0.9375rem 1.5625rem rgba(0, 0, 0, 0.8);
   --box-shadow-image: 0.375rem 0.125rem 1rem 0px rgba(136, 165, 191, 0.48),
     -0.375rem -0.125rem 1rem 0rem rgba(255, 255, 255, 0.8);
 
@@ -124,6 +128,9 @@
   --transition-slow: 1s ease-in-out;
   --transition-medium: 0.5s ease-in-out;
   --transition-fast: 0.2s ease-in-out;
+
+  /* common */
+  --border-radius: 1.2rem;
 
   /* Body */
   --font-weight-body: 500;
@@ -134,12 +141,14 @@
 
   /* Section titles */
   --section-title-color: var(--color-text-dark);
-  --section-title-font-size: clamp(1.8rem, 4vw, 3rem);
+  --section-title-font-size: clamp(1.8rem, 4vw, 2.5rem);
   --section-title-font-weight: 700;
   --section-description-color: var(--color-text);
-  --section-description-font-size: clamp(1rem, 2vw, 1.25rem);
-  --section-description-max-width: 50rem;
+  --section-description-font-size: clamp(1rem, 2vw, 1.08rem);
+  --section-description-max-width: 40rem;
   --section-description-margin: 2rem auto 3rem;
+  --section-column-headings-font-size: clamp(2rem, 2vw, 2.4rem);
+  --section-column-headings-font-weight: 700;
 
   /* Buttons  */
   --gradient-btn: linear-gradient(
@@ -230,10 +239,10 @@ ul {
   list-style: none;
 }
 
-img {
+/* img {
   max-width: 100%;
   height: auto;
-}
+} */
 
 h1,
 h2,
@@ -244,6 +253,10 @@ h6 {
   color: var(--color-headings);
 }
 
+h3 {
+  font-size: var(--section-column-headings-font-size) !important;
+  font-weight: var(--section-column-headings-font-weight) !important;
+}
 /* ==========================
    Section Wrapper
 ========================== */
@@ -264,8 +277,8 @@ h6 {
 .container-wrapper {
   padding-left: 1rem;
   padding-right: 1rem;
-  margin: 0 auto;
-  max-width: 60rem;
+  /* margin: 0 auto; */
+  /* max-width: 60rem; */
 }
 
 /* ==========================
@@ -343,9 +356,9 @@ h6 {
   border: none !important;
   outline: none;
   cursor: pointer;
+  color: var(--btn-text-color);
   background-color: var(--color-secondary);
   transition: var(--btn-transition);
-
   box-shadow: var(--btn-box-shadow);
 }
 
@@ -367,7 +380,7 @@ h6 {
   box-shadow: 0 0.625rem 1.15625rem -0.3125rem var(--color-primary-900);
 }
 
-/* .btn-outline-green {
+.btn-outline-green {
   background: var(--gradient-white) !important;
   text-shadow: none !important;
   padding: 0.5rem 1.5rem !important;
@@ -379,7 +392,7 @@ h6 {
   transition: transform ease 0.2s;
   background-color: var(--btn-color) !important;
   color: var(--btn-text-color) !important;
-} */
+}
 
 /* ==========================
    Animations
